tests/ui/lexer/lex-bad-str-literal-as-char-4.rs
//@edition:2021
macro_rules! foo {
    () => {
        println!('hello world');
        //~^ ERROR unterminated character literal
        //~| ERROR prefix `world` is unknown
    }
}
fn main() {}
